// Protocol package to ensure consistent protocol version across services.
syntax = "proto3";
package microstack.version;

import "google/protobuf/empty.proto";

// The response payload of the `GetVersion` RPC.
message GetVersionResponse {
	// The version of the protocol this server supports.
	string version = 1;
}

// Handles version requests.
service VersionService {
	rpc GetVersion(google.protobuf.Empty) returns (GetVersionResponse);
}
